[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devin-launch-control"
version = "0.1.0"
description = "Launch and orchestrate Devin AI sessions."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Brian Raines" }]
dependencies = ["requests>=2.0.0"]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "ruff>=0.1.0",
  "pytest>=7.0.0",
]

[project.scripts]
devin-launch-control = "launch_control.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
